✨ Add update note API

--- a/serverless.yml
+++ b/serverless.yml
@@ -63,3 +63,12 @@ functions:
       - http:
           path: notes
           method: get
+  update:
+    # Defines an HTTP API endpoint that calls the main function in update.js
+    # - path: url path is /notes/{id}
+    # - method: PUT request
+    handler: update.main
+    events:
+      - http:
+          path: notes/{id}
+          method: put
