✨ Add delete note API

--- a/serverless.yml
+++ b/serverless.yml
@@ -72,3 +72,12 @@ functions:
       - http:
           path: notes/{id}
           method: put
+  delete:
+    # Defines an HTTP API endpoint that calls the main function in delete.js
+    # - path: url path is /notes/{id}
+    # - method: DELETE request
+    handler: delete.main
+    events:
+      - http:
+          path: notes/{id}
+          method: delete
