--- a/serverless.yml
+++ b/serverless.yml
@@ -39,12 +39,15 @@ functions:
   # Defines an HTTP API endpoint that calls the main function in create.js
   # - path: url path is /notes
   # - method: POST request
+  # - authorizer: authenticate using the AWS IAM role
   create:
     handler: create.main
     events:
       - http:
           path: notes
           method: post
+          authorizer: aws_iam
+
   get:
     # Defines an HTTP API endpoint that calls the main function in get.js
     # - path: url path is /notes/{id}
@@ -54,6 +57,8 @@ functions:
       - http:
           path: notes/{id}
           method: get
+          authorizer: aws_iam
+
   list:
     # Defines an HTTP API endpoint that calls the main function in list.js
     # - path: url path is /notes
@@ -63,6 +68,8 @@ functions:
       - http:
           path: notes
           method: get
+          authorizer: aws_iam
+
   update:
     # Defines an HTTP API endpoint that calls the main function in update.js
     # - path: url path is /notes/{id}
@@ -72,6 +79,8 @@ functions:
       - http:
           path: notes/{id}
           method: put
+          authorizer: aws_iam
+
   delete:
     # Defines an HTTP API endpoint that calls the main function in delete.js
     # - path: url path is /notes/{id}
@@ -81,3 +90,4 @@ functions:
       - http:
           path: notes/{id}
           method: delete
+          authorizer: aws_iam
