--- a/env.example
+++ b/env.example
@@ -3,6 +3,5 @@
 # 1 Add environment variables for local development.
 # 2 Rename this file to .env and uncomment it's usage
 #   in the serverless.yml.
-# 3 Make sure to not commit this file.
 
-SAMPLE_ENV_VAR=i-am-an-environment-variable
+STRIPE_SECRET_KEY=
