--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "aws-sdk": "^2.849.0",
     "serverless-bundle": "3.2.0",
     "serverless-dotenv-plugin": "^2.1.1",
-    "serverless-offline": "^5.3.3"
+    "serverless-offline": "^5.3.3",
+    "ts-jest": "^26.5.2"
   },
   "dependencies": {
     "stripe": "^8.137.0",
