✨ Handle API Gateway CORS Errors

--- a/serverless.yml
+++ b/serverless.yml
@@ -10,6 +10,11 @@ plugins:
   - serverless-offline
   - serverless-dotenv-plugin # Load .env as environment variables
 
+# Create our resources with separate CloudFormation templates
+resources:
+  # API Gateway Errors
+  - ${file(resources/api-gateway-errors.yml)}
+
 provider:
   name: aws
   runtime: nodejs12.x
