--- a/services/notes/serverless.yml
+++ b/services/notes/serverless.yml
@@ -18,7 +18,7 @@ resources:
 provider:
   name: aws
   runtime: nodejs12.x
-  stage: prod
+  stage: dev
   region: eu-west-2
 
   # These environment variables are made available to our functions
