👷 Configure S3 in CDK

--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@aws-cdk/aws-dynamodb": "1.91.0",
+    "@aws-cdk/aws-s3": "1.91.0",
     "@aws-cdk/core": "1.91.0",
     "@serverless-stack/cli": "0.9.8",
     "@serverless-stack/resources": "0.9.8"
