--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -13,6 +13,7 @@
     "@aws-cdk/assert": "1.91.0"
   },
   "dependencies": {
+    "@aws-cdk/aws-cognito": "1.91.0",
     "@aws-cdk/aws-dynamodb": "1.91.0",
     "@aws-cdk/aws-s3": "1.91.0",
     "@aws-cdk/core": "1.91.0",
