--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@aws-cdk/aws-cognito": "1.91.0",
     "@aws-cdk/aws-dynamodb": "1.91.0",
+    "@aws-cdk/aws-iam": "1.91.0",
     "@aws-cdk/aws-s3": "1.91.0",
     "@aws-cdk/core": "1.91.0",
     "@serverless-stack/cli": "0.9.8",
